[tool.poetry]
name = "vis_route"
version = "0.1.0"
description = ""
authors = ["witekosz <witekosz@gmail.com>"]
license = "GLP-3.0"

[tool.poetry.dependencies]
python = "^3.9"
gcmap = "^0.0.6"
matplotlib = "^3.3.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
